# barse

./: .gitmodules  Cargo.toml  test.php  toast.php
barse-php-exec/: Cargo.toml  out.file
barse-php-exec/src/: exec.php  lib.rs
barse-php-lexer/: Cargo.toml  build.rs  test.php
barse-php-lexer/src/: lexer.rs  lib.rs  native.rs  native_lexer.php  regex.rs  span.rs  token.rs  token_name.rs  token_stream.rs
barse-php-lexer/tests/: custom.rs  symfony.rs  util.rs
barse-php-parser/: Cargo.toml
barse-php-parser/src/: lib.rs
barse-php-parser/src/ast/: mod.rs
barse-php-parser/src/ast/expr/: binary_op.rs  cast.rs  mod.rs
barse-php-parser/src/ast/stmt/: mod.rs
barse-php-parser/src/ast/token/: mod.rs
php-exec/: Cargo.toml
php-exec/src/: exec.php
php-lexer/: Cargo.toml  build.rs
php-lexer/src/: lexer.rs  native.rs  token_name.rs
php-lexer/tests/: util.rs
