
[package]
name = "barse-php-lexer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_repr = "0.1.19"
barse-php-exec = { path = "../barse-php-exec", optional = true }
serde_json = "1.0.120"
regex = "1.10.5"

[dev-dependencies]
glob = "0.3.1"
paste = "1.0.15"


[features]
php_8_2 = ["php_8_1"]
php_8_1 = ["php_8_0"]
php_8_0 = ["php_7_4"]
php_7_4 = []
native = ["dep:barse-php-exec"]
default = ["native", "php_8_2"]
