[package]
name = "php-lexer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_repr = "0.1.19"
php-exec = { path = "../php-exec" }
serde_json = "1.0.120"


[build-dependencies]
php-exec = { path = "../php-exec" }

[dev-dependencies]
glob = "0.3.1"
